src/network_policies/test1default-fluidos-consumer-fe7e7913d4c72829a1ae445fc8003e5a8742ab4fbff31b8051199508e66cfe97be5832 Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1default-fluidos-consumer-fe7e7913d4c72829a1ae445fc8003e5a8742ab4fbff31b8051199508e66cfe97be5832
  namespace: default-fluidos-consumer-fe7e79
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: product-catalogue
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring-fluidos-consumer-fe7e79
      podSelector: {}
    ports:
    - port: 80
      protocol: TCP
